Add retrieving transactions data